test/scc/pp/errors/056.a
056.t:1:7: error: no macro name given in #undef directive